# rustledger

./: .claassistant  .dockerignore  .envrc  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  RELEASING.md  REVIEW.md  SECURITY.md  bacon.toml  clippy.toml  deny.toml  flake.nix  justfile  release-plz.toml  release.toml  rust-toolchain.toml  treefmt.toml
.copr/: Makefile
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  mergify.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  compatibility.yml  config.yml  feature_request.yml
.github/badges/: benchmark.json
.github/workflows/: bench.yml  branch-name.yml  cargo-vet-auto.yml  ci.yml  claude-interactive.yml  claude-review.yml  claude-security.yml  codeql.yml  gemini-review.yml  release-build.yml  release-plz.yml  release-publish.yml  release.yml  security.yml  supply-chain.yml  tla.yml
crates/rustledger/: CHANGELOG.md  Cargo.toml  README.md
crates/rustledger-booking/: Cargo.toml  README.md
crates/rustledger-booking/src/: interpolate.rs  lib.rs  pad.rs
crates/rustledger-core/: Cargo.toml  README.md
crates/rustledger-core/benches/: inventory_bench.rs
crates/rustledger-core/src/: amount.rs  cost.rs  directive.rs  format.rs  intern.rs  inventory.rs  lib.rs  position.rs
crates/rustledger-core/tests/: property_tests.rs  tla_fifo_bug_test.rs  tla_invariants_test.rs
crates/rustledger-importer/: Cargo.toml
crates/rustledger-importer/src/: config.rs  csv_importer.rs  lib.rs  ofx_importer.rs  registry.rs
crates/rustledger-loader/: CHANGELOG.md  Cargo.toml  README.md
crates/rustledger-loader/src/: cache.rs  lib.rs  options.rs  source_map.rs
crates/rustledger-loader/tests/: loader_test.rs
crates/rustledger-loader/tests/fixtures/: accounts.beancount  cycle_a.beancount  cycle_b.beancount  main_with_include.beancount  missing_include.beancount  parse_error.beancount  path_traversal.beancount  simple.beancount  with_plugin.beancount
crates/rustledger-lsp/: CHANGELOG.md  Cargo.toml  README.md
crates/rustledger-lsp/src/: lib.rs  main.rs  main_loop.rs  server.rs  snapshot.rs  vfs.rs
crates/rustledger-lsp/src/db/: mod.rs
crates/rustledger-lsp/src/handlers/: call_hierarchy.rs  code_actions.rs  code_lens.rs  completion.rs  completion_resolve.rs  declaration.rs  definition.rs  diagnostics.rs  document_color.rs  document_highlight.rs  document_links.rs  execute_command.rs  folding.rs  formatting.rs  hover.rs  inlay_hints.rs  linked_editing.rs  mod.rs  on_type_formatting.rs  range_formatting.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs  signature_help.rs  symbols.rs  type_hierarchy.rs  utils.rs  workspace_symbols.rs
crates/rustledger-parser/: CHANGELOG.md  Cargo.toml  README.md
crates/rustledger-parser/benches/: parser_bench.rs
crates/rustledger-parser/fuzz/: .gitignore  Cargo.toml
crates/rustledger-parser/fuzz/fuzz_targets/: fuzz_parse.rs  fuzz_parse_line.rs
crates/rustledger-parser/src/: error.rs  lexer.rs  lib.rs  logos_lexer.rs  parser.rs  span.rs  token_input.rs  token_parser.rs
crates/rustledger-parser/tests/: parser_integration_test.rs
crates/rustledger-plugin/: Cargo.toml  README.md
crates/rustledger-plugin/src/: convert.rs  lib.rs  native.rs  runtime.rs  types.rs
crates/rustledger-plugin/src/python/: compat.rs  download.rs  mod.rs  runtime.rs
crates/rustledger-plugin/tests/: native_plugins_test.rs
crates/rustledger-plugin/wit/: world.wit
crates/rustledger-query/: Cargo.toml  README.md
crates/rustledger-query/benches/: query_bench.rs
crates/rustledger-query/src/: ast.rs  completions.rs  error.rs  executor.rs  lib.rs  parser.rs  price.rs
crates/rustledger-query/tests/: bql_integration_test.rs
crates/rustledger-validate/: CHANGELOG.md  Cargo.toml  README.md
crates/rustledger-validate/benches/: validate_bench.rs
crates/rustledger-validate/src/: lib.rs
crates/rustledger-validate/tests/: tla_proptest.rs  tla_validation_errors_test.rs  validation_integration_test.rs
crates/rustledger-wasm/: CHANGELOG.md  Cargo.toml  beancount.d.ts  beancount_wasm.d.ts
crates/rustledger-wasm/src/: convert.rs  editor.rs  lib.rs  types.rs
crates/rustledger-web/: Cargo.toml
crates/rustledger-web/src/: handlers.rs  main.rs  models.rs  utils.rs
crates/rustledger-web/templates/: account_detail.html  account_details.html  accounts.html  add_transaction.html  base.html  index.html  macros.html  transactions.html
crates/rustledger-web/templates/partials/: transaction_edit_form.html  transaction_form.html  transaction_list.html
crates/rustledger/benches/: pipeline_bench.rs
crates/rustledger/src/: format.rs  lib.rs  report.rs
crates/rustledger/src/cmd/: check.rs  doctor.rs  extract_cmd.rs  format.rs  mod.rs  price_cmd.rs  query.rs  report_cmd.rs
crates/rustledger/tests/: fixture_tests.rs  integration_test.rs
crates/rustledger/tests/fixtures/: valid-ledger.beancount
docs/: PERFORMANCE_ROADMAP.md
docs/adr/: 0001-crate-organization.md  0002-error-handling.md  0003-parser-design.md  README.md
examples/wasm-plugin/: Cargo.toml  README.md
examples/wasm-plugin-currency-check/: Cargo.toml
examples/wasm-plugin-currency-check/src/: lib.rs
examples/wasm-plugin-duplicate-detect/: Cargo.toml
examples/wasm-plugin-duplicate-detect/src/: lib.rs
examples/wasm-plugin-template/: Cargo.toml  README.md
packaging/: README.md
packaging/aur/: README.md
packaging/debian/: changelog  control  copyright  rules
packaging/nix/: package.nix
packaging/rpm/: rustledger.spec
packaging/scoop/: rustledger.json
scripts/: bench.sh  fetch-test-vectors.sh  model_based_testing.py  test-lima.sh  tla_trace_to_json.py  trace_to_rust_test.py
spec/: README.md  algorithms.md  api.md  architecture.md  bql.md  ci.md  compatibility.md  decimals.md  error-recovery.md  glossary.md  grammar.peg  inventory.md  options.md  ordering.md  performance.md  properties.md  syntax.md  test-vectors.md  validation.md  wasm-plugins.md
supply-chain/: config.toml
(+31 files in other folders)
