[workspace]
resolver = "3"
members = [
  "crates/rustledger-core",
  "crates/rustledger-parser",
  "crates/rustledger-loader",
  "crates/rustledger-booking",
  "crates/rustledger-validate",
  "crates/rustledger-query",
  "crates/rustledger-plugin",
  "crates/rustledger-importer",
  "crates/rustledger",
  "crates/rustledger-wasm",
  "crates/rustledger-lsp",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
repository = "https://github.com/rustledger/rustledger"
homepage = "https://rustledger.github.io"
documentation = "https://docs.rs/rustledger-core"
keywords = ["beancount", "accounting", "finance", "double-entry", "ledger"]
categories = ["command-line-utilities", "finance", "parser-implementations"]
authors = ["Rustledger Contributors"]

[workspace.metadata.crane]
name = "rustledger"

[workspace.dependencies]
# Core
rust_decimal = { version = "1.40", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"

# Parsing
chumsky = "1.0.0-alpha.7"
ariadne = "0.6"
logos = "0.16"
logosky = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rustyline = { version = "17", features = ["derive"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WASM
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
wasmtime = "40"
wasmtime-wasi = "40"
wat = "1"

# Parallelization
rayon = "1.10"

# Testing
proptest = "1"
criterion = "0.8"
insta = { version = "1", features = ["yaml"] }
rust_decimal_macros = "1.40"
tempfile = "3"

# Data formats
csv = "1"
ofxy = "0.2"

# HTTP
ureq = { version = "3", features = ["json"] }

# Compression/Archive (for Python WASI download)
flate2 = "1"
zip = "7"
sha2 = "0.10"

# Serialization (for cache)
rkyv = "0.8"

# Async
tokio = { version = "1", features = ["full"] }

# LSP
lsp-server = "0.7"
lsp-types = "0.97"
ropey = "1"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Internal crates
rustledger-core = { version = "0.4.0", path = "crates/rustledger-core" }
rustledger-parser = { version = "0.4.0", path = "crates/rustledger-parser" }
rustledger-loader = { version = "0.4.0", path = "crates/rustledger-loader" }
rustledger-booking = { version = "0.4.0", path = "crates/rustledger-booking" }
rustledger-validate = { version = "0.4.0", path = "crates/rustledger-validate" }
rustledger-query = { version = "0.4.0", path = "crates/rustledger-query" }
rustledger-plugin = { version = "0.4.0", path = "crates/rustledger-plugin", default-features = false }
rustledger-importer = { version = "0.4.0", path = "crates/rustledger-importer" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow some pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
return_self_not_must_use = "allow"
too_many_lines = "allow"
option_if_let_else = "allow"
# Numeric cast warnings - we use standard patterns
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
# Allow common stylistic patterns
format_push_string = "allow"
default_trait_access = "allow"
unused_self = "allow"
ptr_arg = "allow"
match_same_arms = "allow"
or_fun_call = "allow"
struct_excessive_bools = "allow"
type_complexity = "allow"
manual_let_else = "allow"
ref_option = "allow"
unnecessary_wraps = "allow"
# Allow multiple crate versions - we can't control transitive dependencies
multiple_crate_versions = "allow"

[profile.release]
lto = "thin"  # Full LTO causes Apple linker crash with long symbol names
codegen-units = 1
strip = true

# WASM-optimized profile (use with: cargo build --profile wasm-release)
[profile.wasm-release]
inherits = "release"
opt-level = 3        # Speed over size (~21% larger, ~60% faster)
panic = 'abort'      # Smaller binary, no unwinding

[profile.dev]
# Faster builds in dev
debug = 1

[profile.dev.package."*"]
opt-level = 3

[profile.bench]
debug = true
