[package]
name = "rustledger-core"
description = "Core types for rustledger: Amount, Position, Inventory, and all directive types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "../../README.md"

[dependencies]
rust_decimal = { workspace = true, features = ["serde", "maths"] }
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
rust_decimal_macros = "1.36"
criterion.workspace = true

[[bench]]
name = "inventory_bench"
harness = false

[lints]
workspace = true
