[package]
name = "rustledger-loader"
description = "Beancount file loader with include resolution and options parsing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "../../README.md"

[features]
default = ["cache"]
# Enable rkyv-based binary caching for faster loads
cache = ["dep:rkyv", "dep:sha2", "rustledger-parser/rkyv"]

[dependencies]
rustledger-core.workspace = true
rustledger-parser.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
rkyv = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
rust_decimal_macros.workspace = true
chrono.workspace = true

[lints]
workspace = true
