[package]
name = "rustledger-plugin"
description = "Beancount plugin system with 14 native plugins and WASM support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "../../README.md"

[dependencies]
rustledger-core.workspace = true
wasmtime.workspace = true
serde.workspace = true
rmp-serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rust_decimal.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
wat.workspace = true

[lints]
workspace = true
