[package]
name = "rustledger-validate"
description = "Beancount validation with 27 error codes for ledger correctness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "../../README.md"

[lib]
bench = false

[dependencies]
rustledger-core.workspace = true
rustledger-booking.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
chrono.workspace = true
rayon.workspace = true

[dev-dependencies]
rust_decimal_macros = "1.40"
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "validate_bench"
harness = false

[lints]
workspace = true
