[package]
name = "rustledger-wasm"
description = "Beancount WebAssembly bindings for JavaScript/TypeScript"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["plugins", "completions"]
## Include native plugin support (runPlugin, listPlugins)
plugins = ["dep:rustledger-plugin"]
## Include BQL query completions (bqlCompletions)
completions = []

[dependencies]
rustledger-core.workspace = true
rustledger-parser.workspace = true
rustledger-booking.workspace = true
rustledger-validate.workspace = true
rustledger-query.workspace = true
rustledger-plugin = { workspace = true, default-features = false, optional = true }
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
chrono.workspace = true

# Better panic messages in WASM
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
# Optimize for speed (aligned with profile.wasm-release opt-level = 3)
# Feature flags required for newer Rust WASM output:
# - bulk-memory: memory.copy/memory.fill instructions
# - nontrapping-float-to-int: i32.trunc_sat_f64_s and similar
wasm-opt = [
  "-O3",
  "--enable-mutable-globals",
  "--enable-bulk-memory",
  "--enable-nontrapping-float-to-int",
]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[lints]
workspace = true
