[package]
name = "currency-check-plugin"
version = "0.1.0"
edition = "2021"
description = "Plugin that validates currency usage across accounts"

[lib]
crate-type = ["cdylib"]

[dependencies]
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
