[package]
name = "duplicate-detect-plugin"
version = "0.1.0"
edition = "2021"
description = "Plugin that detects potentially duplicate transactions"

[lib]
crate-type = ["cdylib"]

[dependencies]
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
